syntax = "proto3";

package cart.service.v1;

import "google/api/annotations.proto";

option go_package = '/cart';

service CartService {
  //新增购物车商品
  rpc AddItem(AddItemReq) returns (AddItemResp) {
    option (google.api.http) = {
      post: "/v1/carts",
      body: "*"
    };
  }
  //获取购物车信息
  rpc GetCart(GetCartReq) returns (GetCartResp) {
    option (google.api.http) = {
      get: "/v1/carts"
    };
  }
  //清空购物车
  rpc EmptyCart(EmptyCartReq) returns (EmptyCartResp) {
    option (google.api.http) = {
      delete: "/v1/carts"
    };
  }
  //更新购物车商品数量
  rpc UpdateItem(UpdateItemReq) returns (UpdateItemResp) {
    option (google.api.http) = {
      put: "/v1/carts/item",
      body: "*"
    };
  }
  //删除购物车商品
  rpc RemoveItem(RemoveItemReq) returns (RemoveItemResp) {
    option (google.api.http) = {
      delete: "/v1/carts/item/{product_id}"
    };
  }
}
// 购物车商品
message CartItem {
  uint32 product_id = 1;   // 商品ID
  int32 quantity = 2;       // 商品数量
  double price = 3;         // 商品单价
}

// 新增购物车商品
message AddItemReq {
  uint32 user_id = 1;
  CartItem item = 2;
}

message AddItemResp {}

// 清空购物车
message EmptyCartReq {
  uint32 user_id = 1;
}

message EmptyCartResp {}

// 获取购物车信息
message GetCartReq {
  uint32 user_id = 1;
}

message GetCartResp {
  Cart cart = 1;
}

// 购物车信息
message Cart {
  uint32 user_id = 1;       // 用户ID
  repeated CartItem items = 2;   // 购物车商品列表
  double total_amount = 3;  // 购物车总金额
}


// 更新购物车商品
message UpdateItemReq {
  uint32 user_id = 1;
  CartItem item = 2;
}
message UpdateItemResp {}

// 删除购物车商品
message RemoveItemReq {
  uint32 user_id = 1;
  uint32 product_id = 2;
}
message RemoveItemResp {}
